<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_menu_container"
    android:background="#FFEFEF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/benefit_card_top"
        android:layout_margin="20dp"
        app:cardElevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_card">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/help"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:strokeWidth="1dp"
                app:cardBackgroundColor="#F7D9FF"
                app:strokeColor="#FF97DC"
                app:cardCornerRadius="360dp"
                android:layout_width="55dp"
                android:layout_height="55dp">

                <TextView
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\?"
                    android:shadowColor="#8C333232"
                    android:shadowDx="2"
                    android:shadowDy="10"
                    android:shadowRadius="15"
                    android:fontFamily="@font/squada_one_regular"
                    android:textSize="55sp"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_centerInParent="true"
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefit"
                android:shadowColor="#8C333232"
                android:shadowDx="2"
                android:shadowDy="10"
                android:shadowRadius="5"
                android:fontFamily="@font/squada_one_regular"
                android:textSize="80sp"
                android:textColor="@color/white"/>

            <TextView
                android:padding="5dp"
                android:id="@+id/username_textView"
                android:layout_marginTop="10dp"
                android:layout_below="@id/app_title"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#8C333232"
                android:shadowDx="1.2"
                android:shadowDy="1.6"
                android:shadowRadius="3"
                android:fontFamily="@font/squada_one_regular"
                android:textColor="@color/white"
                android:textSize="28sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:animateLayoutChanges="true"
        android:id="@+id/material_card_view"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="#D1B1EA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/benefit_card_top"
        style="@style/CustomCardViewStyle" >

        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/improve_card_container"
                app:cardElevation="0dp"
                app:cardBackgroundColor="#26985CB5"
                app:cardCornerRadius="360dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="20dp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:paddingBottom="20dp"
                    android:shadowColor="#4D333232"
                    android:shadowDx="2"
                    android:shadowDy="5"
                    android:backgroundTintMode="screen"
                    android:shadowRadius="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/squada_one_regular"
                    android:textColor="@color/white"
                    android:text="@string/what_do_you_want_to_improve_on" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/upper_body"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/improve_card_container"
                app:cardBackgroundColor="#80985CB5"
                app:cardCornerRadius="360dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upper Body"
                    android:shadowColor="#8C333232"
                    android:shadowDx="2"
                    android:shadowDy="10"
                    android:shadowRadius="5"
                    android:fontFamily="@font/squada_one_regular"
                    android:textSize="40sp"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/lower_body"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/upper_body"
                app:cardBackgroundColor="#80985CB5"
                app:cardCornerRadius="360dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lower_body"
                    android:shadowColor="#8C333232"
                    android:shadowDx="2"
                    android:shadowDy="10"
                    android:shadowRadius="5"
                    android:fontFamily="@font/squada_one_regular"
                    android:textSize="40sp"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/log_ins"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/lower_body"
                app:cardBackgroundColor="#80985CB5"
                app:cardCornerRadius="360dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_ins"
                    android:shadowColor="#8C333232"
                    android:shadowDx="2"
                    android:shadowDy="10"
                    android:shadowRadius="5"
                    android:fontFamily="@font/squada_one_regular"
                    android:textSize="40sp"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container_view"/>
</RelativeLayout>